--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,18 @@
 # Site settings
-title: Johnson
-description: '自己优秀，才是最稳重的靠山。'
-url: 'https://github.com/zsfbradleyjohnson'
+title: Jekyll-Uno
+description: 'Jekyll-Uno - a minimal, responsive theme for Jekyll'
+url: 'http://joshgerdes.com/jekyll-uno'
 baseurl: ''
 # google_analytics: 'UA-XXXXXX-X'
 # disqus_shortname: 'your-disqus-name'
 
 author:
-  name: 'Bradley Johnson'
-  email: zsfbradleyjohnson@126.com
-  twitter_username:
-  facebook_username:
-  github_username:
-  linkedin_username:
+  name: 'Josh Gerdes'
+  email: josh@joshgerdes.com
+  twitter_username: joshgerdes
+  facebook_username: joshgerdes
+  github_username:  joshgerdes
+  linkedin_username:  joshgerdes
 
 defaults:
   -
