--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Johnson
 email: zsfbradleyjohnson@126.com
-description: Make real
+description:
 baseurl: ""
 url: "https://zsfbradleyjohnson.github.io"
 
