--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@ title: Johnson
 email: zsfbradleyjohnson@126.com
 description:
 baseurl: ""
-url: "https://zsfbradleyjohnson.github.io"
+url: "http://www.zsfbradleyjohnson.com"
 
 author:
   name     : 'Bradley Johnson'
   email    : zsfbradleyjohnson@126.com
-  url      : https://zsfbradleyjohnson.github.io
+  url      : http://www.zsfbradleyjohnson.com
   facebook : http://facebook.com/fernando.dev
   twitter  : http://twitter.com/nandomoreirame
 
